refactor: introduce ErrorCode and decouple time dependency in Reservation and adopt new constructor method of Reservation